--- a/ooiui/templates/common/basic.html
+++ b/ooiui/templates/common/basic.html
@@ -4,11 +4,33 @@
     <title>Basic</title>
 {% endblock %}
 
+{% block beforebootstrap %}
+
+  <style>
+  .panel-title a {
+    display: block;
+  }
+  .panel-title a:hover {
+    text-decoration: none;
+  }
+  .panel-title a:focus {
+    text-decoration: none;
+  }
+  #accordion .panel-heading {
+    color: #fff;
+    background-image: linear-gradient(to bottom,#337ab7 0,#265a88 100%);
+  }
+
+  </style>
+{% endblock %}
+
 {% block head %}
   <link rel="stylesheet" href="/css/compiled/basic.css" type="text/css" />
   <!-- Partials -->
   <script src="/js/partials/compiled/basic.js" type="text/javascript"></script>
   <script src="/js/compiled/basic.js" type="text/javascript"></script>
+
+
 {% endblock %}
 
 {%block body %}    
@@ -19,7 +41,57 @@
     <div class="container-fluid">
       <div class="row">
         <div id="contentBody" class="col-lg-12">
-          Content goes here
+          <div class="panel">
+            <div class="panel-heading">
+              <strong><span class="fa fa-globe"></span> Heading</strong>
+            </div> <!-- panel-heading -->
+            <div class="panel-body">
+              <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingOne">
+                    <h4 class="panel-title">
+                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Collapsible Group Item #1
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                    <div class="panel-body">
+                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingTwo">
+                    <h4 class="panel-title">
+                      <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Collapsible Group Item #2
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                    <div class="panel-body">
+                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingThree">
+                    <h4 class="panel-title">
+                      <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Collapsible Group Item #3
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                    <div class="panel-body">
+                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div> <!-- panel-body -->
+          </div>
         </div>
       </div>
     </div>
@@ -29,11 +101,6 @@
 $(document).ready(function() {
   var navbar = new NavbarView();
   $('body').prepend(navbar.el);
-  var panel = new PanelView({
-    heading: 'Panel Heading',
-    body: '<div class="col-sm-12">Panel Body</div>'
-  });
-  $('#contentBody').html(panel.el);
 });
 </script>
 
