Better resizing support for map and plots

--- a/ooiui/static/js/partials/ArrayItem.html
+++ b/ooiui/static/js/partials/ArrayItem.html
@@ -1,5 +1,5 @@
 <!-- <li> -->
-<a data-toggle="tooltip" data-placement="bottom" data-delay="500" title="<%= data.get('reference_designator') %>" data-reference-designator="<%= data.get('reference_designator') %>" href='#'>
+<a data-toggle="tooltip" data-placement="top" data-delay="500" title="<%= data.get('reference_designator') %>" data-reference-designator="<%= data.get('reference_designator') %>" href='#'>
   <%= data.get('display_name') %>
   <span class="fa arrow"></span>
 </a>
